updating ncistd -> barnacle

--- a/figures/1-simulation/cv-workflow-validation.ipynb
+++ b/figures/1-simulation/cv-workflow-validation.ipynb
@@ -14,7 +14,7 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import seaborn as sns\n",
-    "from ncistd import visualize_3d_tensor, plot_factors_heatmap\n",
+    "from barnacle import visualize_3d_tensor, plot_factors_heatmap\n",
     "from pathlib import Path\n",
     "from sklearn.model_selection import ParameterGrid\n",
     "import tensorly as tl\n",
