--- a/figures/1-simulation/simulation-example.ipynb
+++ b/figures/1-simulation/simulation-example.ipynb
@@ -18,7 +18,7 @@
     "import tensorly as tl\n",
     "from tensorly import check_random_state\n",
     "from tensorly.cp_tensor import CPTensor\n",
-    "from ncistd import (\n",
+    "from barnacle import (\n",
     "    SparseCP,    \n",
     "    visualize_3d_tensor, \n",
     "    plot_factors_heatmap, \n",
