--- a/figures/5-models/component-robustness-sparsity.ipynb
+++ b/figures/5-models/component-robustness-sparsity.ipynb
@@ -13,7 +13,7 @@
     "import matplotlib as mpl\n",
     "from matplotlib import pyplot as plt\n",
     "import matplotlib.colors as mcolors\n",
-    "from ncistd import plot_factors_heatmap\n",
+    "from barnacle import plot_factors_heatmap\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "from pathlib import Path\n",
@@ -24,7 +24,7 @@
     "from tlviz.factor_tools import factor_match_score\n",
     "from tlab.cp_tensor import load_cp_tensor\n",
     "import xarray as xr\n",
-    "from ncistd.tensors import SparseCPTensor\n",
+    "from barnacle.tensors import SparseCPTensor\n",
     "\n",
     "# ignore chained assignment warning in pandas\n",
     "pd.set_option('mode.chained_assignment', None)\n"
