--- a/figures/6-clusters/component-profiles.ipynb
+++ b/figures/6-clusters/component-profiles.ipynb
@@ -12,7 +12,7 @@
     "import itertools\n",
     "import matplotlib as mpl\n",
     "from matplotlib import pyplot as plt\n",
-    "from ncistd import plot_factors_heatmap\n",
+    "from barnacle import plot_factors_heatmap\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "from pathlib import Path\n",
@@ -24,7 +24,7 @@
     "from tlviz.factor_tools import factor_match_score\n",
     "from tlab.cp_tensor import load_cp_tensor\n",
     "import xarray as xr\n",
-    "from ncistd.tensors import SparseCPTensor\n"
+    "from barnacle.tensors import SparseCPTensor\n"
    ]
   },
   {
