finished draft of zinser comparison

--- a/figures/8-interpretation/diel-clusters-interpretation.ipynb
+++ b/figures/8-interpretation/diel-clusters-interpretation.ipynb
@@ -1723,7 +1723,18 @@
     "- Try Savitzky-Golay filter\n",
     "    - https://docs.scipy.org/doc/scipy/reference/generated/scipy.signal.savgol_filter.html\n",
     "- Try spline\n",
-    "    - https://docs.scipy.org/doc/scipy/tutorial/interpolate/smoothing_splines.html\n"
+    "    - https://docs.scipy.org/doc/scipy/tutorial/interpolate/smoothing_splines.html\n",
+    "\n",
+    "### actually\n",
+    "\n",
+    "- weights vs. time fraction\n",
+    "- lineplot of weights binned by time class\n",
+    "    - just diel weights in those with clear signature\n",
+    "    - all weights in rest\n",
+    "    - mean with sd or median with quartiles\n",
+    "    - also potentially leave out nonzero\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -1751,7 +1762,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
