updated cluster correlations figure and data inputs notebook

--- a/data/assemble-data-inputs.ipynb
+++ b/data/assemble-data-inputs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -122,11 +122,10 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>name</th>\n",
+       "      <th>genomeid</th>\n",
+       "      <th>genomename</th>\n",
        "      <th>type</th>\n",
        "      <th>group</th>\n",
-       "      <th>ecotype</th>\n",
        "      <th>clade</th>\n",
        "      <th>virocell</th>\n",
        "      <th>completeness</th>\n",
@@ -135,62 +134,56 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2716884503</td>\n",
-       "      <td>AG-679-M23</td>\n",
+       "      <td>2716884698</td>\n",
+       "      <td>AG-316-L16</td>\n",
        "      <td>SAG</td>\n",
        "      <td>Prochlorococcus</td>\n",
-       "      <td>High light adapted (HL)</td>\n",
-       "      <td>HLI</td>\n",
+       "      <td>AMZ-II</td>\n",
        "      <td>False</td>\n",
-       "      <td>99.73</td>\n",
+       "      <td>20.69</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2716884367</td>\n",
-       "      <td>AG-388-E21</td>\n",
+       "      <td>2716884700</td>\n",
+       "      <td>AG-316-N23</td>\n",
        "      <td>SAG</td>\n",
        "      <td>Prochlorococcus</td>\n",
-       "      <td>High light adapted (HL)</td>\n",
-       "      <td>HLI</td>\n",
+       "      <td>AMZ-II</td>\n",
        "      <td>False</td>\n",
-       "      <td>98.91</td>\n",
+       "      <td>20.69</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2716884409</td>\n",
-       "      <td>AG-418-M08</td>\n",
+       "      <td>2716884701</td>\n",
+       "      <td>AG-316-P23</td>\n",
        "      <td>SAG</td>\n",
        "      <td>Prochlorococcus</td>\n",
-       "      <td>High light adapted (HL)</td>\n",
-       "      <td>HLI</td>\n",
+       "      <td>AMZ-II</td>\n",
        "      <td>False</td>\n",
-       "      <td>98.51</td>\n",
+       "      <td>12.07</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>2716884731</td>\n",
-       "      <td>AG-388-J02</td>\n",
+       "      <td>2716884699</td>\n",
+       "      <td>AG-316-L21</td>\n",
        "      <td>SAG</td>\n",
        "      <td>Prochlorococcus</td>\n",
-       "      <td>High light adapted (HL)</td>\n",
-       "      <td>HLI</td>\n",
+       "      <td>AMZ-II</td>\n",
        "      <td>False</td>\n",
-       "      <td>98.37</td>\n",
+       "      <td>10.34</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>2716884783</td>\n",
-       "      <td>AG-442-D10</td>\n",
+       "      <td>2716884642</td>\n",
+       "      <td>AG-316-A05</td>\n",
        "      <td>SAG</td>\n",
        "      <td>Prochlorococcus</td>\n",
-       "      <td>High light adapted (HL)</td>\n",
-       "      <td>HLI</td>\n",
+       "      <td>AMZ-II</td>\n",
        "      <td>False</td>\n",
-       "      <td>96.47</td>\n",
+       "      <td>6.90</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
-       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -206,7 +199,6 @@
        "      <td>ISOLATE</td>\n",
        "      <td>Virus</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>False</td>\n",
        "      <td>0.00</td>\n",
        "    </tr>\n",
@@ -216,7 +208,6 @@
        "      <td>Syn19</td>\n",
        "      <td>ISOLATE</td>\n",
        "      <td>Virus</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>False</td>\n",
        "      <td>0.00</td>\n",
@@ -228,7 +219,6 @@
        "      <td>ISOLATE</td>\n",
        "      <td>Virus</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>False</td>\n",
        "      <td>0.00</td>\n",
        "    </tr>\n",
@@ -238,7 +228,6 @@
        "      <td>metaG-MbCM1</td>\n",
        "      <td>ISOLATE</td>\n",
        "      <td>Virus</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>False</td>\n",
        "      <td>0.00</td>\n",
@@ -250,46 +239,45 @@
        "      <td>ISOLATE</td>\n",
        "      <td>Virus</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>False</td>\n",
        "      <td>0.00</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>770 rows × 8 columns</p>\n",
+       "<p>770 rows × 7 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "             id         name     type            group  \\\n",
-       "0    2716884503   AG-679-M23      SAG  Prochlorococcus   \n",
-       "1    2716884367   AG-388-E21      SAG  Prochlorococcus   \n",
-       "2    2716884409   AG-418-M08      SAG  Prochlorococcus   \n",
-       "3    2716884731   AG-388-J02      SAG  Prochlorococcus   \n",
-       "4    2716884783   AG-442-D10      SAG  Prochlorococcus   \n",
-       "..          ...          ...      ...              ...   \n",
-       "765   651703106       S-ShM2  ISOLATE            Virus   \n",
-       "766   651703107        Syn19  ISOLATE            Virus   \n",
-       "767   641201056         Syn5  ISOLATE            Virus   \n",
-       "768  2595698410  metaG-MbCM1  ISOLATE            Virus   \n",
-       "769   638275565         Syn9  ISOLATE            Virus   \n",
+       "       genomeid   genomename     type            group   clade  virocell  \\\n",
+       "0    2716884698   AG-316-L16      SAG  Prochlorococcus  AMZ-II     False   \n",
+       "1    2716884700   AG-316-N23      SAG  Prochlorococcus  AMZ-II     False   \n",
+       "2    2716884701   AG-316-P23      SAG  Prochlorococcus  AMZ-II     False   \n",
+       "3    2716884699   AG-316-L21      SAG  Prochlorococcus  AMZ-II     False   \n",
+       "4    2716884642   AG-316-A05      SAG  Prochlorococcus  AMZ-II     False   \n",
+       "..          ...          ...      ...              ...     ...       ...   \n",
+       "765   651703106       S-ShM2  ISOLATE            Virus     NaN     False   \n",
+       "766   651703107        Syn19  ISOLATE            Virus     NaN     False   \n",
+       "767   641201056         Syn5  ISOLATE            Virus     NaN     False   \n",
+       "768  2595698410  metaG-MbCM1  ISOLATE            Virus     NaN     False   \n",
+       "769   638275565         Syn9  ISOLATE            Virus     NaN     False   \n",
        "\n",
-       "                     ecotype clade  virocell  completeness  \n",
-       "0    High light adapted (HL)   HLI     False         99.73  \n",
-       "1    High light adapted (HL)   HLI     False         98.91  \n",
-       "2    High light adapted (HL)   HLI     False         98.51  \n",
-       "3    High light adapted (HL)   HLI     False         98.37  \n",
-       "4    High light adapted (HL)   HLI     False         96.47  \n",
-       "..                       ...   ...       ...           ...  \n",
-       "765                      NaN   NaN     False          0.00  \n",
-       "766                      NaN   NaN     False          0.00  \n",
-       "767                      NaN   NaN     False          0.00  \n",
-       "768                      NaN   NaN     False          0.00  \n",
-       "769                      NaN   NaN     False          0.00  \n",
+       "     completeness  \n",
+       "0           20.69  \n",
+       "1           20.69  \n",
+       "2           12.07  \n",
+       "3           10.34  \n",
+       "4            6.90  \n",
+       "..            ...  \n",
+       "765          0.00  \n",
+       "766          0.00  \n",
+       "767          0.00  \n",
+       "768          0.00  \n",
+       "769          0.00  \n",
        "\n",
-       "[770 rows x 8 columns]"
+       "[770 rows x 7 columns]"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -297,6 +285,7 @@
    "source": [
     "# clean genome metadata\n",
     "\n",
+    "# combine genome metadata from Berube et al. 2018 publication\n",
     "genome_df = pd.merge(\n",
     "    left=pd.read_csv('metadata/cycogsgenomes.tsv', sep='\\t'), \n",
     "    right=pd.read_csv('metadata/genome_assembly_summary_20180718.tsv', sep='\\t'), \n",
@@ -305,11 +294,16 @@
     "    how='left'\n",
     ")\n",
     "\n",
+    "# add updated clade assignments\n",
+    "genome_df['clade'] = genome_df['IMG_ID'].map(\n",
+    "    pd.read_csv('metadata/updated-genome-clades.csv', sep=',').set_index('img_genome_id')['clade']\n",
+    ")\n",
+    "\n",
     "# standardize field names\n",
     "genome_df.rename(\n",
     "    columns={\n",
-    "        'IMG_ID':'id', \n",
-    "        'IID':'name', \n",
+    "        'IMG_ID':'genomeid', \n",
+    "        'IID':'genomename', \n",
     "        'GROUP':'group', \n",
     "        'TYPE':'type', \n",
     "        'Completeness':'completeness', \n",
@@ -320,28 +314,8 @@
     "# add virocell field\n",
     "genome_df['virocell'] = (genome_df['usage_notes'] == 'likely virocell')\n",
     "\n",
-    "# fix clades\n",
-    "genome_df['clade'] = genome_df['clade'].map({\n",
-    "    '5.1A-1': '5.1A-I',\n",
-    "    '5.1A-I': '5.1A-I',\n",
-    "    '5.1A-II': '5.1A-II',\n",
-    "    '5.1A-III': '5.1A-III',\n",
-    "    '5.1A-III/XV': '5.1A-III/XV',\n",
-    "    '5.1A-IV': '5.1A-IV',\n",
-    "    '5.1B-VII': '5.1B-VII',\n",
-    "    'CDR2': 'CRD2',\n",
-    "    'HLI': 'HLI',\n",
-    "    'HLII': 'HLII',\n",
-    "    'HLIII': 'HLIII',\n",
-    "    'HLVI': 'HLVI',\n",
-    "    'LLI': 'LLI',\n",
-    "    'LLII/III': 'LLII/III',\n",
-    "    'LLIV': 'LLIV',\n",
-    "    'unclassified': np.nan\n",
-    "})\n",
-    "\n",
     "# down select only needed fields & sort\n",
-    "genome_df = genome_df[['id', 'name', 'type', 'group', 'ecotype', 'clade', 'virocell', 'completeness']].sort_values(\n",
+    "genome_df = genome_df[['genomeid', 'genomename', 'type', 'group', 'clade', 'virocell', 'completeness']].sort_values(\n",
     "    ['group', 'clade', 'type', 'completeness'], ascending=[True, True, False, False]\n",
     ").reset_index(drop=True)\n",
     "\n",
@@ -367,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -391,11 +365,11 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>MappingName</th>\n",
-       "      <th>OrthologID</th>\n",
-       "      <th>GenomeName</th>\n",
-       "      <th>GeneID</th>\n",
-       "      <th>Annotation</th>\n",
+       "      <th>mappingname</th>\n",
+       "      <th>cycogid</th>\n",
+       "      <th>genomename</th>\n",
+       "      <th>geneid</th>\n",
+       "      <th>annotation</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -493,20 +467,20 @@
        "</div>"
       ],
       "text/plain": [
-       "                      MappingName  OrthologID      GenomeName      GeneID  \\\n",
-       "0               WH8102_2607658325    60000001          WH8102  2607658325   \n",
-       "1              MIT0917_2681971350    60000001         MIT0917  2681971350   \n",
-       "2           AG-424-P18_2717338506    60000001      AG-424-P18  2717338506   \n",
-       "3       scB245a_521A19_2655604637    60000001  scB245a_521A19  2655604637   \n",
-       "4                GFB01_2638208352    60000001           GFB01  2638208352   \n",
-       "...                           ...         ...             ...         ...   \n",
-       "964917      AG-363-C02_2667889608    60040295      AG-363-C02  2667889608   \n",
-       "964918      AG-363-C02_2667889615    60040295      AG-363-C02  2667889615   \n",
-       "964919      AG-363-C02_2667890048    60040295      AG-363-C02  2667890048   \n",
-       "964920      AG-363-C02_2667890054    60040295      AG-363-C02  2667890054   \n",
-       "964921      AG-363-C02_2667890060    60040295      AG-363-C02  2667890060   \n",
+       "                      mappingname   cycogid      genomename      geneid  \\\n",
+       "0               WH8102_2607658325  60000001          WH8102  2607658325   \n",
+       "1              MIT0917_2681971350  60000001         MIT0917  2681971350   \n",
+       "2           AG-424-P18_2717338506  60000001      AG-424-P18  2717338506   \n",
+       "3       scB245a_521A19_2655604637  60000001  scB245a_521A19  2655604637   \n",
+       "4                GFB01_2638208352  60000001           GFB01  2638208352   \n",
+       "...                           ...       ...             ...         ...   \n",
+       "964917      AG-363-C02_2667889608  60040295      AG-363-C02  2667889608   \n",
+       "964918      AG-363-C02_2667889615  60040295      AG-363-C02  2667889615   \n",
+       "964919      AG-363-C02_2667890048  60040295      AG-363-C02  2667890048   \n",
+       "964920      AG-363-C02_2667890054  60040295      AG-363-C02  2667890054   \n",
+       "964921      AG-363-C02_2667890060  60040295      AG-363-C02  2667890060   \n",
        "\n",
-       "                                      Annotation  \n",
+       "                                      annotation  \n",
        "0       membrane protease FtsH catalytic subunit  \n",
        "1       membrane protease FtsH catalytic subunit  \n",
        "2       membrane protease FtsH catalytic subunit  \n",
@@ -522,7 +496,7 @@
        "[964922 rows x 5 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -531,36 +505,32 @@
     "# clean and join\n",
     "\n",
     "# read in cycog data\n",
-    "filepath_cycogs = '../../../data/genomes/berube_et_al_2018/cycogs.tsv'\n",
+    "filepath_cycogs = 'metadata/cycogs.tsv'\n",
     "cycog_df = pd.read_csv(filepath_cycogs, sep='\\t')\n",
-    "cycog_df['OrthologID'] =[int(id_val[6:]) for id_val in cycog_df['cycog_iid']]\n",
+    "cycog_df['cycogid'] =[int(id_val[6:]) for id_val in cycog_df['cycog_iid']]\n",
+    "\n",
     "# make dictionary of cycog genes\n",
     "cog_dict = {}\n",
     "for _, row in cycog_df.iterrows():\n",
     "    cog = int(row['cycog_iid'][6:])\n",
     "    for gene in row['cycog_genes'].split(','):\n",
     "        cog_dict[gene] = cog\n",
+    "\n",
     "# make dataframe from cog dict       \n",
     "cogs_df = pd.DataFrame.from_dict(cog_dict, dtype=int, orient='index', columns=['cycog_iid'])\n",
+    "\n",
     "# clean up data columns\n",
     "cogs_df.reset_index(inplace=True)\n",
-    "cogs_df.rename(columns={'index':'MappingName', 'cycog_iid':'OrthologID'}, inplace=True)\n",
-    "cogs_df['GenomeName'], cogs_df['GeneID'] = list(zip(*cogs_df['MappingName'].str.rsplit('_', 1)))\n",
-    "# join in annotation information\n",
-    "cogs_df['Annotation'] = cogs_df.OrthologID.map(cycog_df.set_index('OrthologID')['cycog_cns_product'])\n",
-    "cogs_df\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# save cleaned ortholog metadata\n",
+    "cogs_df.rename(columns={'index':'mappingname', 'cycog_iid':'cycogid'}, inplace=True)\n",
+    "cogs_df['genomename'], cogs_df['geneid'] = list(zip(*cogs_df['mappingname'].str.rsplit(pat='_', n=1)))\n",
     "\n",
-    "cogs_df.to_csv('../data/berube_pro_syn_set/ortholog_metadata.csv', index=False)\n",
-    "cogs_df.to_csv('../../../data/mappings/2021-02-18/collated/berube_pro_syn_set/ortholog_metadata.csv', index=False)\n"
+    "# join in annotation information\n",
+    "cogs_df['annotation'] = cogs_df.cycogid.map(cycog_df.set_index('cycogid')['cycog_cns_product'])\n",
+    "\n",
+    "# save cleaned ortholog metadata\n",
+    "cogs_df.to_csv('metadata/ortholog-metadata.csv', index=False)\n",
+    "\n",
+    "cogs_df\n"
    ]
   },
   {
@@ -587,9 +557,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
