fixing everything to CamelCase

--- a/data/assemble-data-inputs.ipynb
+++ b/data/assemble-data-inputs.ipynb
@@ -122,13 +122,13 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>genomeid</th>\n",
-       "      <th>genomename</th>\n",
-       "      <th>type</th>\n",
-       "      <th>group</th>\n",
-       "      <th>clade</th>\n",
-       "      <th>virocell</th>\n",
-       "      <th>completeness</th>\n",
+       "      <th>GenomeID</th>\n",
+       "      <th>GenomeName</th>\n",
+       "      <th>Type</th>\n",
+       "      <th>Group</th>\n",
+       "      <th>Clade</th>\n",
+       "      <th>Virocell</th>\n",
+       "      <th>Completeness</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -248,7 +248,7 @@
        "</div>"
       ],
       "text/plain": [
-       "       genomeid   genomename     type            group   clade  virocell  \\\n",
+       "       GenomeID   GenomeName     Type            Group   Clade  Virocell  \\\n",
        "0    2716884698   AG-316-L16      SAG  Prochlorococcus  AMZ-II     False   \n",
        "1    2716884700   AG-316-N23      SAG  Prochlorococcus  AMZ-II     False   \n",
        "2    2716884701   AG-316-P23      SAG  Prochlorococcus  AMZ-II     False   \n",
@@ -261,7 +261,7 @@
        "768  2595698410  metaG-MbCM1  ISOLATE            Virus     NaN     False   \n",
        "769   638275565         Syn9  ISOLATE            Virus     NaN     False   \n",
        "\n",
-       "     completeness  \n",
+       "     Completeness  \n",
        "0           20.69  \n",
        "1           20.69  \n",
        "2           12.07  \n",
@@ -295,28 +295,27 @@
     ")\n",
     "\n",
     "# add updated clade assignments\n",
-    "genome_df['clade'] = genome_df['IMG_ID'].map(\n",
-    "    pd.read_csv('metadata/updated-genome-clades.csv', sep=',').set_index('img_genome_id')['clade']\n",
+    "genome_df['Clade'] = genome_df['IMG_ID'].map(\n",
+    "    pd.read_csv('metadata/updated-genome-clades.csv', sep=',').set_index('IMGGenomeID')['Clade']\n",
     ")\n",
     "\n",
     "# standardize field names\n",
     "genome_df.rename(\n",
     "    columns={\n",
-    "        'IMG_ID':'genomeid', \n",
-    "        'IID':'genomename', \n",
-    "        'GROUP':'group', \n",
-    "        'TYPE':'type', \n",
-    "        'Completeness':'completeness', \n",
+    "        'IMG_ID':'GenomeID', \n",
+    "        'IID':'GenomeName', \n",
+    "        'GROUP':'Group', \n",
+    "        'TYPE':'Type', \n",
     "    }, \n",
     "    inplace=True\n",
     ")\n",
     "\n",
     "# add virocell field\n",
-    "genome_df['virocell'] = (genome_df['usage_notes'] == 'likely virocell')\n",
+    "genome_df['Virocell'] = (genome_df['usage_notes'] == 'likely virocell')\n",
     "\n",
     "# down select only needed fields & sort\n",
-    "genome_df = genome_df[['genomeid', 'genomename', 'type', 'group', 'clade', 'virocell', 'completeness']].sort_values(\n",
-    "    ['group', 'clade', 'type', 'completeness'], ascending=[True, True, False, False]\n",
+    "genome_df = genome_df[['GenomeID', 'GenomeName', 'Type', 'Group', 'Clade', 'Virocell', 'Completeness']].sort_values(\n",
+    "    ['Group', 'Clade', 'Type', 'Completeness'], ascending=[True, True, False, False]\n",
     ").reset_index(drop=True)\n",
     "\n",
     "# save cleaned up genome dataframe\n",
@@ -365,11 +364,11 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>mappingname</th>\n",
-       "      <th>cycogid</th>\n",
-       "      <th>genomename</th>\n",
-       "      <th>geneid</th>\n",
-       "      <th>annotation</th>\n",
+       "      <th>MappingName</th>\n",
+       "      <th>CyCOGID</th>\n",
+       "      <th>GenomeName</th>\n",
+       "      <th>GeneID</th>\n",
+       "      <th>Annotation</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -467,7 +466,7 @@
        "</div>"
       ],
       "text/plain": [
-       "                      mappingname   cycogid      genomename      geneid  \\\n",
+       "                      MappingName   CyCOGID      GenomeName      GeneID  \\\n",
        "0               WH8102_2607658325  60000001          WH8102  2607658325   \n",
        "1              MIT0917_2681971350  60000001         MIT0917  2681971350   \n",
        "2           AG-424-P18_2717338506  60000001      AG-424-P18  2717338506   \n",
@@ -480,7 +479,7 @@
        "964920      AG-363-C02_2667890054  60040295      AG-363-C02  2667890054   \n",
        "964921      AG-363-C02_2667890060  60040295      AG-363-C02  2667890060   \n",
        "\n",
-       "                                      annotation  \n",
+       "                                      Annotation  \n",
        "0       membrane protease FtsH catalytic subunit  \n",
        "1       membrane protease FtsH catalytic subunit  \n",
        "2       membrane protease FtsH catalytic subunit  \n",
@@ -502,12 +501,12 @@
     }
    ],
    "source": [
-    "# clean and join\n",
+    "# make mapping file with each reference matched to its corresponding CyCOG ID, Genome, and Annotation\n",
     "\n",
     "# read in cycog data\n",
     "filepath_cycogs = 'metadata/cycogs.tsv'\n",
     "cycog_df = pd.read_csv(filepath_cycogs, sep='\\t')\n",
-    "cycog_df['cycogid'] =[int(id_val[6:]) for id_val in cycog_df['cycog_iid']]\n",
+    "cycog_df['CyCOGID'] =[int(id_val[6:]) for id_val in cycog_df['cycog_iid']]\n",
     "\n",
     "# make dictionary of cycog genes\n",
     "cog_dict = {}\n",
@@ -521,11 +520,11 @@
     "\n",
     "# clean up data columns\n",
     "cogs_df.reset_index(inplace=True)\n",
-    "cogs_df.rename(columns={'index':'mappingname', 'cycog_iid':'cycogid'}, inplace=True)\n",
-    "cogs_df['genomename'], cogs_df['geneid'] = list(zip(*cogs_df['mappingname'].str.rsplit(pat='_', n=1)))\n",
+    "cogs_df.rename(columns={'index':'MappingName', 'cycog_iid':'CyCOGID'}, inplace=True)\n",
+    "cogs_df['GenomeName'], cogs_df['GeneID'] = list(zip(*cogs_df['MappingName'].str.rsplit(pat='_', n=1)))\n",
     "\n",
     "# join in annotation information\n",
-    "cogs_df['annotation'] = cogs_df.cycogid.map(cycog_df.set_index('cycogid')['cycog_cns_product'])\n",
+    "cogs_df['Annotation'] = cogs_df.CyCOGID.map(cycog_df.set_index('CyCOGID')['cycog_cns_product'])\n",
     "\n",
     "# save cleaned ortholog metadata\n",
     "cogs_df.to_csv('metadata/ortholog-metadata.csv', index=False)\n",
