figure tweaks and edits

--- a/analyses/1-simulation/2-cv-workflow-validation.ipynb
+++ b/analyses/1-simulation/2-cv-workflow-validation.ipynb
@@ -3258,7 +3258,7 @@
     "ax_b.figure.colorbar(sm, cax=fig.add_subplot(gs[0, 29]), \n",
     "                     label='True Fraction Zeros\\n(Gene Component Matrix)', aspect=20);\n",
     "\n",
-    "plt.savefig('cv-parameterization-validation.png', bbox_inches='tight')\n"
+    "plt.savefig(out_dir / 'cv-parameterization-validation.png', bbox_inches='tight')\n"
    ]
   },
   {
@@ -3787,7 +3787,7 @@
     "    axis.legend(loc='center left', bbox_to_anchor=(1, 0.5))\n",
     "\n",
     "    \n",
-    "fig.savefig('robustness-to-misspecification.png', bbox_inches='tight')\n"
+    "fig.savefig(out_dir / 'robustness-to-misspecification.png', bbox_inches='tight')\n"
    ]
   },
   {
